--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WanderLust</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="icon" type="image/png" href="/images/logo.svg" />
+   <a href="/listings">
+  <img src="/images/logo.svg" alt="Wanderlust Logo" width="40" height="40" />
+</a>
+
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
