--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WanderLust</title>
     <link rel="stylesheet" href="/css/style.css" />
-   <a href="/listings">
-  <img src="/images/logo.svg" alt="Wanderlust Logo" width="40" height="40" />
-</a>
+  <link rel="icon" type="image/svg+xml" href="/images/logo.svg" />
 
 
     <link
